<resources>
    <string name="app_name">SportPlus</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="contest">Créer un match</string>
    <string name="historique">Historique</string>
    <string name="map" translatable="false">Map</string>
    <string name="message" translatable="false">Messages</string>
    <string name="share" translatable="false">Share</string>
    <string name="slideshow" translatable="false">Slideshow</string>
    <string name="tools" translatable="false">Tools</string>
    <string name="android_studio_android_com" translatable="false">android.studio@android.com</string>
    <string name="android_studio" translatable="false">Android Studio</string>
    <string name="image">image</string>
    <string name="title_activity_maps_fragment" translatable="false">Map</string>
    <string name="launcher" translatable="false">image launcher</string>
    <string name="team1">Paris SG</string>
    <string name="team2">Olympique Marseille</string>
    <string name="start">Commencer match</string>
    <string name="time1">temps: 1min</string>
    <string name="time2">temps: 2min</string>
    <string name="choisir_la_date_de_rencontre">Choisir la date de rencontre</string>
    <string name="choisir_la_dur_e_r_elle_de_rencpntre">Choisir la durée réelle de rencpntre</string>
    <string name="teamchoice">Choisir les équipes</string>
    <string name="composition">Choisir la composition de chaque équipe</string>
    <string name="lieu">Choisir le lieu de rencontre</string>
    <string name="Nom">Choisir le nom de la rencontre</string>
    <string name="getteam1">Equipe 1 : %1$s</string>
    <string name="getteam2">Equipe 2 : %1$s</string>
    <string name="score" translatable="false">%1$s vs %2$s : %3$d - %4$d</string>
    <string name="contestphoto">photo du match</string>
    <string-array name="gardien">
        <item>Kévin Trapp</item>
        <item>Alphonse Aréola</item>
    </string-array>
    <string-array name="defenseur">
        <item>Thiago Silva</item>
        <item>Marquinhos</item>
    </string-array>
    <string-array name="milieu">
        <item>Marco Verratti</item>
        <item>Thiago Motta</item>
    </string-array>
    <string-array name="attaquant">
        <item>Edinson Cavani</item>
        <item>Hatem Ben Arfa</item>
    </string-array>
    <array name="psg">
        <item>@array/gardien</item>
        <item>@array/defenseur</item>
        <item>@array/milieu</item>
        <item>@array/attaquant</item>
    </array>
    <string name="timelapse">Temps restant: %1$d:%2$d</string>
    <string name="timeelapsed">Fin de la rencontre %1$s vs %2$s!</string>
    <string name="info">ID: %1$d \n<b>Nom de la rencontre</b>: %2$s
                \n<b>Equipe à domicile</b> : %3$s
                \n<b>Equipe à l\'extérieur</b> : %4$s
                \n<b>Date du match</b> : %5$s
                \n<b>Lieu du match :</b> %6$s
                \n<b>Composition equipe à domicile</b> : %7$s
                \n<b>Composition equipe extérieur :</b> : %8$s
    </string>

</resources>
