<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_contest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <TextView
        android:id="@+id/textView"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/teamchoice"/>
        <RadioGroup
            android:layout_below="@+id/textView"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/RG1"
            android:gravity="start">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RB1"
                android:checked="true"
                android:text="@string/team1"
                android:layout_weight="0.25"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RB2"
                android:text="@string/team2"
                android:layout_weight="0.25"/>
        </RadioGroup>
        <RadioGroup
            android:layout_below="@+id/textView"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/RG2"
            android:gravity="end">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RB3"
                android:text="@string/team1"
                android:layout_weight="0.25"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RB4"
                android:text="@string/team2"
                android:checked="true"
                android:layout_weight="0.25"/>
        </RadioGroup>
        <TextView
            android:layout_below="@+id/RG1"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/choisir_la_dur_e_r_elle_de_rencpntre" />
        <RadioGroup
            android:id="@+id/RG3"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:gravity="center">

            <RadioButton
                android:id="@+id/RB5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:checked="true"
                android:text="@string/time1" />

            <RadioButton
                android:id="@+id/RB6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/time2" />


        </RadioGroup>
        <TextView
            android:id="@+id/textView3"
            android:layout_below="@id/RG3"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/choisir_la_date_de_rencontre" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:ems="5"
            android:hint="@android:string/untitled"
            android:inputType="date" />
        <TextView
            android:id="@+id/textView4"
            android:layout_below="@+id/editText"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lieu"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:ems="5"
            android:hint="@android:string/unknownName"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/textView5"
            android:layout_below="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/composition"/>
        <TableLayout
            android:id="@+id/Dom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:layout_below="@id/textView5">
            <TableRow>

                <Spinner
                    android:id="@+id/gardien1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/gardien"/>
            </TableRow>
            <TableRow>

                <Spinner
                    android:id="@+id/defenseur11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/defenseur"/>
                <Spinner
                    android:id="@+id/defenseur12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/defenseur"/>
            </TableRow>
            <TableRow>
            <Spinner
                android:id="@+id/milieu11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/milieu"/>
            <Spinner
                android:id="@+id/milieu12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/milieu"/>
            </TableRow>
            <TableRow>
                <Spinner
                    android:id="@+id/attaquant11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/attaquant"/>
                <Spinner
                    android:id="@+id/attaquant12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/attaquant"/>
            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/textView6"
            android:layout_below="@+id/Dom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/Nom"/>
        <EditText
            android:id="@+id/Nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:inputType="text" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:srcCompat="@android:drawable/ic_menu_camera"
            tools:ignore="RelativeOverlap"
            android:layout_alignTop="@+id/editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contest"
            android:text="@string/start"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</ScrollView>

</FrameLayout>